--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,11 +1,11 @@
-pip install srsly
-pip install ollama
-pip install tqdm
-pip install beautifulsoup4
-pip install numpy
-pip install faiss-cpu
-pip install transformers==4.51.0
-pip install torch==2.9.0
+srsly
+ollama
+tqdm
+beautifulsoup4
+numpy
+faiss-cpu
+transformers==4.51.0
+torch==2.9.0
 
 # For GPU users
-#pip install torch torchvision --index-url https://download.pytorch.org/whl/cu126
+#torch torchvision --index-url https://download.pytorch.org/whl/cu126
